--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
-    "expo-updates": "~0.3.3",
     "expo-splash-screen": "~0.6.2",
+    "expo-updates": "~0.3.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
@@ -18,7 +19,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
