--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "predeploy": "expo build:web",
+    "predeploy": "install && expo build:web",
     "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
   },
   "dependencies": {
