--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "public",
+    "public": "app/web-build",
     "ignore": [
       "firebase.json",
       "**/.*",
