--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "start": "react-native start",
     "test": "jest",
     "predeploy": "expo build:web",
-    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
+    "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
     "expo": "~39.0.2",
