--- a/firebase.json
+++ b/firebase.json
@@ -9,4 +9,18 @@
   "database": {
     "rules": "database.rules.json"
   },
+  "hosting": {
+    "public": "app/web-build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
