--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,12 @@
   "database": {
     "rules": "database.rules.json"
   },
+  "emulators": {
+    "database": {
+      "port": "9001"
+    }
+  },
+
   "hosting": {
     "public": "app/web-build",
     "ignore": [
